--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 
     <div style="text-align: center; margin: 40px 0 0 0;">
-        <a href="https://youtu.be/ugvHCXCOmm4" target="_blank" rel="noopener">
+        <a href="https://youtu.be/eLAq8yzvu8Q" target="_blank" rel="noopener">
             Watch the original for Demystifying Large Language Models in Healthcare AI on YouTube
         </a>
     </div>
