--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <figure>
-        <figcaption>Demystifying Large Language Models in Healthcare AI</figcaption>
+        
         <audio loop controls>
             <source src="data.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
@@ -131,7 +131,7 @@
 
     <div style="text-align: center; margin: 40px 0 0 0;">
         <a href="https://youtu.be/eLAq8yzvu8Q" target="_blank" rel="noopener">
-            Watch the original for Demystifying Large Language Models in Healthcare AI on YouTube
+            Watch the original Demystifying Large Language Models in Healthcare AI on YouTube
         </a>
     </div>
 
