--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             Your browser does not support the audio element.
         </audio>
     </figure>
-
+  <h1>Generative AI for Healthcare (Part 1): Demystifying Large Language Models</h1>
   <p>
     The <strong>"Generative AI for Healthcare (Part 1): Demystifying Large Language Models"</strong> video from Stanford Online explains&nbsp;generative AI and large language models (LLMs) for healthcare professionals.
     The hosts, clinical informaticists and emergency/internal medicine physicians, acknowledge the lack of accessible educational material and aim to empower viewers with knowledge for&nbsp;safe and effective implementation of these tools.
@@ -131,7 +131,7 @@
 
     <div style="text-align: center; margin: 40px 0 0 0;">
         <a href="https://youtu.be/eLAq8yzvu8Q" target="_blank" rel="noopener">
-            Watch the original Demystifying Large Language Models in Healthcare AI on YouTube
+            Watch the original Generative AI for Healthcare (Part 1): Demystifying Large Language Models on YouTube
         </a>
     </div>
 
